--- a/ANA2Swat.Rmd
+++ b/ANA2Swat.Rmd
@@ -8,7 +8,6 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
 library(RODBC) ### Acesss database conection
 library(tidyr)
 library(dplyr)
@@ -17,202 +16,132 @@ library(tidyverse) ###
 library(plyr) ###
 library(plotly) ###
 library(ggplot2) ###
+library(zoo)
 
 ```
 
 ```{r Precipitation}
 
-# con <- odbcConnect("BcoFluPlu")
-db <- "D:\\Documentos\\OneDrive\\03 - Doutorado\\Tese\\Chapter III\\Guages\\ANA17032021_Edberto\\BcoFluPlu.mdb"
-con2 <- odbcConnectAccess2007(db)
+setwd("C:/temp/SwatProject_Grb") ### Select folder 
 
-sqlTables(con2, tableType = "TABLE")$TABLE_NAME
+# connect to Access Data base file
 
-# Chuvas <- sqlFetch(con2, "Chuvas")
-# Vazoes <- sqlFetch(con2, "Vazoes")
+db <- ".\\Gauges\\ANA\\BcoFluPlu.mdb" ### Database files (.mdb) can be download form https://www.snirh.gov.br/hidroweb/ or requested by email - hidro@ana.gov.br
+con <- odbcConnectAccess2007(db)
 
-qryPCP <- "SELECT * FROM Chuvas WHERE EstacaoCodigo =  2851022 OR 
-EstacaoCodigo =  2852014 OR 
-EstacaoCodigo =  2852031 OR 
-EstacaoCodigo =  2951010 OR 
-EstacaoCodigo =  2951070 OR 
-EstacaoCodigo =  2851044 OR 
-EstacaoCodigo =  2852004 OR 
-EstacaoCodigo =  2851020 OR 
-EstacaoCodigo =  2851021 OR 
-EstacaoCodigo =  2851024 OR 
-EstacaoCodigo =  2851028 OR 
-EstacaoCodigo =  2852009 OR 
-EstacaoCodigo =  2852024 OR 
-EstacaoCodigo =  2852046 OR 
-EstacaoCodigo =  2852050 OR 
-EstacaoCodigo =  2952001 OR 
-EstacaoCodigo =  2851005 OR
-EstacaoCodigo =  2952038 OR
-EstacaoCodigo =  2851052 OR
-EstacaoCodigo =  2852016 OR
-EstacaoCodigo =  2852052 OR
-EstacaoCodigo =  2852053 OR
-EstacaoCodigo =  86560000 OR 
-EstacaoCodigo =  86580000 OR 
-EstacaoCodigo =  86510000"
+### Select weather gauge Stations
+qryPCP <- "SELECT * FROM Chuvas WHERE (year(Data) >= 2008) AND
+                                      (EstacaoCodigo =  2851022 OR 
+                                      EstacaoCodigo =  2951010 OR 
+                                      EstacaoCodigo =  2951070 OR 
+                                      EstacaoCodigo =  2851044 OR 
+                                      EstacaoCodigo =  2851021 OR 
+                                      EstacaoCodigo =  2851024 OR 
+                                      EstacaoCodigo =  2852046 OR 
+                                      EstacaoCodigo =  2852050 OR 
+                                      EstacaoCodigo =  2952001 OR 
+                                      EstacaoCodigo =  2952038 OR
+                                      EstacaoCodigo =  2851052 OR
+                                      EstacaoCodigo =  2852052 OR
+                                      EstacaoCodigo =  2852053 )
+                                      order by EstacaoCodigo , Data" 
 
+### Get access to precipation table
+TblPrecipitation <- sqlQuery(con, qryPCP)
 
-TblPrecipitation <- sqlQuery(con2, qryPCP)
+### Format and reorder the preciptation data 
+lstPrecipitation <- lapply(1:nrow(TblPrecipitation), function(x){
+                      output_df <- data.frame("Code"  = TblPrecipitation[x,"EstacaoCodigo"],
+                                              "NivelConsistencia" = TblPrecipitation[x,"NivelConsistencia"],
+                                              "Date" = seq.Date(floor_date(as.Date(TblPrecipitation[x,"Data"], "%d/%m/%Y", tz = '' ),"month"),
+                                                                by = "day", length.out = days_in_month(as.Date(TblPrecipitation[x,"Data"], "%d/%m/%Y", tz = ''))),
+                                              "TipoMedicaoChuvas" = TblPrecipitation[x,"TipoMedicaoChuvas"],
+                                              "PCP" = round(t(TblPrecipitation[x,] %>%
+                                                                select(starts_with("Chuva"),-contains("Status")) %>%
+                                                                select(1:days_in_month(as.Date(TblPrecipitation[x,"Data"], "%d/%m/%Y", tz = '')))),2),
+                                              "ChuvaStatus" = (t(TblPrecipitation[x,] %>%
+                                                                   select(starts_with("Chuva") & ends_with("Status")) %>%
+                                                                   select(1:days_in_month(as.Date(TblPrecipitation[x,"Data"], "%d/%m/%Y", tz = ''))))))
+                                              names(output_df)[5:6] <- c("PCP", "ChuvaStatus")
+                      return(output_df)
+                    })
 
-TblPrecipitation$Data <- as.Date(TblPrecipitation$Data,format = "%d/%m/%Y")
-tblchuvaANA1998_2019 <- TblPrecipitation %>%
-  arrange(Data , EstacaoCodigo) %>%
-  filter(Data >= as.Date('1998-01-01'))
+### Unlist
+PCP.ANA <- do.call(rbind, lstPrecipitation)
 
+### Order PCP by gauge stations and fill date gaps
+List.WeatherStaGrb <- PCP.ANA %>%
+                     group_split(Code)
 
-listANA <- lapply(1:nrow(tblchuvaANA1998_2019), function(x){
-  output_df <- data.frame("Code"  = tblchuvaANA1998_2019[x,"EstacaoCodigo"],
-                         "NivelConsistencia" = tblchuvaANA1998_2019[x,"NivelConsistencia"],
-                         "Date" = seq.Date(as.Date(tblchuvaANA1998_2019[x,"Data"], "%d/%m/%Y"), 
-                                           by = "day", length.out = days_in_month(as.Date(tblchuvaANA1998_2019[x,"Data"], "%d/%m/%Y"))),
-                         "TipoMedicaoChuvas" = tblchuvaANA1998_2019[x,"TipoMedicaoChuvas"],
-                         "PCP" = (t(tblchuvaANA1998_2019[x,] %>% 
-                                        select(starts_with("Chuva"),-contains("Status")) %>% 
-                                        select(1:days_in_month(as.Date(tblchuvaANA1998_2019[x,"Data"], "%d/%m/%Y"))))),
-                         "ChuvaStatus" = (t(tblchuvaANA1998_2019[x,] %>% 
-                                              select(starts_with("Chuva") & ends_with("Status")) %>% 
-                                              select(1:days_in_month(as.Date(tblchuvaANA1998_2019[x,"Data"], "%d/%m/%Y")))))
-  ) 
-  names(output_df)[5:6] <- c("PCP", "ChuvaStatus")
-  return(output_df)
-}
-)
+### Fill gaps and format lists to produce a Heatmap graph
+List.WeatherStaGrb <- lapply(1:length(List.WeatherStaGrb), function(x){
+                                         List.WeatherStaGrb[[x]] %>%
+                                          complete(Date = seq(ymd("2008-01-01"), #### Fill the gaps on data
+                                                              ymd("2020-12-31"),1),
+                                                   fill = list(Code = as.character(unique(List.WeatherStaGrb[[x]][,"Code"])),
+                                                               PCP = -99))  %>%  ### Riquired by SWAT
+                                           mutate( year = factor(year(Date)), ### To creat a calendar organize months and weeks
+                                                   weekday = wday(Date, label = T, week_start = 1), 
+                                                   yearmonth =  factor(as.yearmon(Date)),
+                                                   month = month(Date, label = T, abbr = F),
+                                                   wk = as.POSIXlt(Date)$wday,
+                                                   week = as.numeric(isoweek(Date)),
+                                                   day = day(Date)) %>%
+                                           mutate(week = case_when(month == "December" & week == 1 ~ 53, ### Correct weeks of year
+                                                  month == "January" & week %in% 52:53 ~ 0,
+                                                  TRUE ~ week),
+                                                    pcat = cut(PCP, c(-1, 0, .5, 1:5, 7, 9, 15, 20, 25, 30, 200)))%>% ### Create class of PCP
+                                           ddply(.(yearmonth),transform,monthweek=1+week-min(week)) ### Convert weeks of year to month
+                                     })
 
-PCPANA <- do.call(rbind, listANA)
-PCPANA[is.na(PCPANA)] <- -99.0
+### Set color to Heatmap
+pubu <- RColorBrewer::brewer.pal(9, "BuPu")[3:9]
+col_p <- colorRampPalette(pubu)
 
-List.WeatherStaGrb = PCPANA %>%
-                        group_split(Code)
+### Create a heatmapCalendar
+lapply(1:length(List.WeatherStaGrb), function(x){ 
+  ggplot(List.WeatherStaGrb[[x]], 
+         aes(weekday, monthweek, fill = pcat)) +
+    geom_tile(colour = "white", size = .4)  + 
+    guides(fill = guide_colorsteps(barwidth = 15,
+                                   barheight = .3,
+                                   title.position = "top")) +
+    scale_fill_manual(values = c("gray90", col_p(13)),
+                      na.value = "grey65", drop = FALSE) +
+    facet_grid(year~ month, scales = "free_y") +
+    labs(subtitle = paste("Weather Station code:",unique(List.WeatherStaGrb[[x]]$Code)), 
+         title = "Daily precipitation",
+         caption = "Source: ANA - Agência Nacional de Águas e Saneamento Básico",
+         fill = "mm") +
+    scale_y_reverse() +
+    theme_classic()+
+    theme(legend.position = "bottom",
+          legend.text = element_text( hjust = .5),
+          legend.title = element_text(size = 8, hjust = 1),
+          axis.title = element_blank(),
+          axis.ticks = element_blank(),
+          axis.text.y = element_blank(),
+          axis.text.x  = element_text(angle = 90,hjust=1, vjust=0.2),
+          panel.grid = element_blank(),
+          panel.background = element_blank(),
+          plot.caption =  element_text( hjust = 1, size = 8),
+          text = element_text(size=8))
+  # ggsave(file= paste0(unique(dat_pr[[x]]$Code),"_PCP.png"),  ### Save files 
+  #         width = 26, height = 18, units = "cm",dpi = 300)
+})
 
+### Write a SwatFile - Need Check the initial date
 lapply(1:length(List.WeatherStaGrb), function(x){
-  write.table(cbind(as.numeric(transform(List.WeatherStaGrb[[x]][,"Date"], Date = format(Date , "%Y%m%d"))[,1]),
-                    # List.WeatherStaGrb[[x]][,c("PCP")]),
-               signif(List.WeatherStaGrb[[x]][,c("PCP")],4)),
-              col.names = FALSE, 
-              row.names	= F,
-              sep = ",",
-              file=paste0("PCP_",unique(List.WeatherStaGrb[[x]][,"Code"]),"_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][1,"Date"], Date = format(Date , "%Y%m%d"))), "_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][dim(List.WeatherStaGrb[[x]])[1],"Date"], Date = format(Date , "%Y%m%d"))),
-                          ".txt"))
+  write.table(List.WeatherStaGrb[[x]][,c("PCP")],
+    col.names = 20080501, ### Start date
+    row.names	= F,
+    quote  = F,
+    sep = ",",
+    file=paste0("PCP_",unique(List.WeatherStaGrb[[x]][1,"Code"]),"_",
+                format(as.Date(List.WeatherStaGrb[[x]][1,"Date"]),"%Y%m%d"),"_",
+                format(as.Date(List.WeatherStaGrb[[x]][dim(List.WeatherStaGrb[[x]])[1],"Date"],"Date"),"%Y%m%d"),
+                ".txt"))
 })
 
 
 ```
-
-
-
-```{r Q}
-
-qryQ <- "SELECT * FROM Vazoes WHERE EstacaoCodigo =  2851022 OR 
-EstacaoCodigo =  2852014 OR 
-EstacaoCodigo =  2852031 OR 
-EstacaoCodigo =  2951010 OR 
-EstacaoCodigo =  2951070 OR 
-EstacaoCodigo =  2851044 OR 
-EstacaoCodigo =  2852004 OR 
-EstacaoCodigo =  2851020 OR 
-EstacaoCodigo =  2851021 OR 
-EstacaoCodigo =  2851024 OR 
-EstacaoCodigo =  2851028 OR 
-EstacaoCodigo =  2852009 OR 
-EstacaoCodigo =  2852024 OR 
-EstacaoCodigo =  2852046 OR 
-EstacaoCodigo =  2852050 OR 
-EstacaoCodigo =  2952001 OR 
-EstacaoCodigo =  86560000 OR 
-EstacaoCodigo =  86580000 OR 
-EstacaoCodigo =  86510000"
-
-TblQ <- sqlQuery(con2, qryQ)
-
-TblQ$Data <- as.Date(TblQ$Data,format = "%d/%m/%Y")
-tblQANA1998_2019 <- TblQ %>%
-  arrange(Data , EstacaoCodigo) %>%
-  filter(Data >= as.Date('1998-01-01'))
-
-listQANA <- lapply(1:nrow(tblQANA1998_2019), function(x){
-  output_df <- data.frame("Code"  = tblQANA1998_2019[x,"EstacaoCodigo"],
-                         "NivelConsistencia" = tblQANA1998_2019[x,"NivelConsistencia"],
-                         "Date" = seq.Date(as.Date(tblQANA1998_2019[x,"Data"], "%d/%m/%Y"), 
-                                           by = "day", length.out = days_in_month(as.Date(tblQANA1998_2019[x,"Data"], "%d/%m/%Y"))),
-                         "MetodoObtencaoVazoes" = tblQANA1998_2019[x,"MetodoObtencaoVazoes"],
-                         "Q" = (t(tblQANA1998_2019[x,] %>% 
-                                        select(starts_with("Vazao"),-contains("Status")) %>% 
-                                        select(1:days_in_month(as.Date(tblQANA1998_2019[x,"Data"], "%d/%m/%Y"))))),
-                         "QStatus" = (t(tblQANA1998_2019[x,] %>% 
-                                              select(starts_with("Vazao") & ends_with("Status")) %>% 
-                                              select(1:days_in_month(as.Date(tblQANA1998_2019[x,"Data"], "%d/%m/%Y")))))
-  ) 
-  names(output_df)[5:6] <- c("Q", "QStatus")
-  return(output_df)
-})
-
-QANA <- do.call(rbind, listQANA)
-QANA[is.na(QANA)] <- -99.0
-
-List.WeatherStaGrb = QANA %>%
-                      group_split(Code)
-
-lapply(1:length(List.WeatherStaGrb), function(x){
-  write.table(cbind(as.numeric(transform(List.WeatherStaGrb[[x]][,"Date"], Date = format(Date , "%Y%m%d"))[,1]),
-                    # List.WeatherStaGrb[[x]][,c("Q")]),
-                    round(List.WeatherStaGrb[[x]][,c("Q")],2)),
-              col.names = FALSE, 
-              row.names	= F,
-              sep = ",",
-              file=paste0("Q_",unique(List.WeatherStaGrb[[x]][,"Code"]),"_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][1,"Date"], Date = format(Date , "%Y%m%d"))), "_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][dim(List.WeatherStaGrb[[x]])[1],"Date"], Date = format(Date , "%Y%m%d"))),
-                          ".txt"))
-})
-
-
-
-```
-
-```{r}
-
-
-qryStaion <- "SELECT * FROM Estacao WHERE Codigo =  2851022 OR 
-                                          Codigo =  2852014 OR 
-                                          Codigo =  2852031 OR 
-                                          Codigo =  2951010 OR 
-                                          Codigo =  2951070 OR 
-                                          Codigo =  2851044 OR 
-                                          Codigo =  2852004 OR 
-                                          Codigo =  2851020 OR 
-                                          Codigo =  2851021 OR 
-                                          Codigo =  2851024 OR 
-                                          Codigo =  2851028 OR 
-                                          Codigo =  2852009 OR 
-                                          Codigo =  2852024 OR 
-                                          Codigo =  2852046 OR 
-                                          Codigo =  2852050 OR 
-                                          Codigo =  2952001 OR 
-                                          Codigo =  2851005 OR
-                                          Codigo =  2952038 OR
-                                          Codigo =  2851052 OR
-                                          Codigo =  2852016 OR
-                                          Codigo =  2852052 OR
-                                          Codigo =  2852053 OR
-                                          Codigo =  86560000 OR 
-                                          Codigo =  86580000 OR 
-                                          Codigo =  86510000"
-
-TblStaion <- sqlQuery(con2, qryStaion)
-TblStaion <- TblStaion[,c("Codigo","Nome","Latitude","Longitude","Altitude")]
-colnames(TblStaion) <- c("ID","NAME","LAT","LONG","ELEVATION")
-
-
-
- 
-
-```
-
