--- a/Inmet2Swat.Rmd
+++ b/Inmet2Swat.Rmd
@@ -22,306 +22,235 @@ library(dplyr)
 
 This script helps to convert the Weather stations data from inmet to csv files to be used on swat anayslis.
 
-The weather data could be download from https://bdmep.inmet.gov.br/
+The weather data can be download from https://bdmep.inmet.gov.br/
 
 
-```{r Import inmet files - AutomaticStations}
+```{r Import inmet files - Gauge Stations}
 
-### https://bdmep.inmet.gov.br/
+setwd("C:/temp/SwatProject_Grb")
 
-# setwd("C:\\SWAT\\ArcSWAT\\Databases\\Tese\\Gauges")
+### weather gauge station download from https://bdmep.inmet.gov.br/
 
-setwd("C:\\SWAT\\ArcSWAT\\Databases\\Tese\\Gauges")
+GuageNames <- c("A828","A837","A839","A840","A844","A853",
+               "A856","A880","83942","83914","83916") ### subset satation
 
-list.weatherStations = list.files(path = ".\\Automatic",pattern = "*.csv")
+list.weatherStations <- append(list.files(path = "./Gauges/INMET/Automatic",pattern = "*.csv", full.names=TRUE),
+                              list.files(path = "./Gauges/INMET/NonAutomatic",pattern = "*.csv", full.names=TRUE)) 
+                            
+list.weatherStations <- unique(grep(paste(GuageNames,collapse="|"),list.weatherStations,value=TRUE))
 
-list.weatherStations = paste0(".\\Automatic\\",list.weatherStations)
+Head.weatherStations <- lapply(list.weatherStations, function(x){
+  read.delim(x, nrows = 8, header = FALSE, col.names = c("Cod","Infor"), sep = ":")})
 
-weatherStations = lapply(list.weatherStations, function(x){
- read.delim(x, skip = 10, sep = ";" ,na.strings = "null", col.names = c("Date","PCP","ATMpress","DEWPT","TMPmax","TMPmea","TMPmin","HMD","HMDmin","WNDmax","WND","NA"))[,1:11]})
+ColnamesWeather = list(c("Date","EVAP","INSO","PCP","TMPmax","TMPmea","TMPmin","HMD","WND","NA"),
+                       c("Date","PCP","ATMpress","DEWPT","TMPmax","TMPmea","TMPmin","HMD","HMDmin","WNDmax","WND","NA"))
 
-Head.weatherStations = lapply(list.weatherStations, function(x){
- read.delim(x, nrows = 8, header = FALSE, col.names = c("Cod","Infor"), sep = ":")})
-
+weatherStations <- lapply(1:length(list.weatherStations), function(x){
+                            read.delim(list.weatherStations[x], skip = 10, sep = ";" ,na.strings = "null",
+                                       col.names = if(length(grep("NonAutomatic",list.weatherStations[x]))==0) {
+                                         ColnamesWeather[[2]]}
+                                       else {ColnamesWeather[[1]]})
+                                        })
+                    
 df_list.SWAT = lapply(1:length(Head.weatherStations), function(x){
   output_df = data.frame("Code" = gsub(" ", "", Head.weatherStations[[x]][2,"Infor"]),
                          "Name" = gsub(" ", "", Head.weatherStations[[x]][1,"Infor"]),
                          "Latitude" = Head.weatherStations[[x]][3,"Infor"],
                          "Longitude" = Head.weatherStations[[x]][4,"Infor"],
                          "Elevation" = Head.weatherStations[[x]][5,"Infor"],
-                         "Date" =  format(as.Date(weatherStations[[x]][,"Date"]),"%m/%d/%Y"),
+                         "StartOperation" = Head.weatherStations[[x]][7,"Infor"],
+                         "Date" = as.Date(weatherStations[[x]][,"Date"], tz = ''),
                          "HMD" = weatherStations[[x]][,"HMD"],
                          "PCP" = weatherStations[[x]][,"PCP"],
                          "TMPmax" = weatherStations[[x]][,"TMPmax"],
                          "TMPmin" = weatherStations[[x]][,"TMPmin"],
-                         "WND" = weatherStations[[x]][,"WND"])
+                         "WND" = round(weatherStations[[x]][,"WND"],1))
 })
 
-full_df = do.call(rbind, df_list.SWAT)
-full_df[is.na(full_df)] <- -99.0
-full_df$Date = as.Date(full_df$Date, "%m/%d/%Y")
 
-List.WeatherStaGrb = full_df %>%
-                 arrange(Date , Code) %>%
-                filter(Code %in% c("A828","A837","A839","A840","A844","A853","A856","A880","A882","A883","A894")) %>%    
+full_df <- do.call(rbind, df_list.SWAT)
+
+dates <- seq(as.Date("2008-01-01"), as.Date("2020-12-31"), by="days")
+
+full_df <- subset(full_df, Date %in% dates)
+          
+### Order PCP by gauge stations and fill date gaps
+List.WeatherStaGrbINMET <- full_df %>%
   group_split(Code)
 
+### Fill gaps and format lists to produce a Heatmap graph
+List.WeatherStaGrbINMET <- lapply(1:length(List.WeatherStaGrbINMET), function(x){
+  List.WeatherStaGrbINMET[[x]] %>%
+    complete(Date = seq(ymd("2008-01-01"), #### Fill the gaps on data
+                        ymd("2020-12-31"),1),
+             fill = list(Code = as.character(unique(List.WeatherStaGrbINMET[[x]][,"Code"])),
+                         PCP = -99,
+                         HMD = -99,
+                         TMPmax = -99,
+                         TMPmin = -99,
+                         WND = -99))  %>%  ### Riquired by SWAT
+    mutate( year = factor(year(Date)), ### To creat a calendar organize months and weeks
+            weekday = wday(Date, label = T, week_start = 1), 
+            yearmonth =  factor(as.yearmon(Date)),
+            month = month(Date, label = T, abbr = F),
+            wk = as.POSIXlt(Date)$wday,
+            week = as.numeric(isoweek(Date)),
+            day = day(Date)) %>%
+    mutate(week = case_when(month == "December" & week == 1 ~ 53, ### Correct weeks of year
+                            month == "January" & week %in% 52:53 ~ 0,
+                            TRUE ~ week),
+           HMDcat = cut(HMD, c(-1, 0, 5, 10, 20,30,40,50,60,70,80,90,100)),
+           WNDcat = cut(WND, c(-1, 0, .5, 2.5, 5, 7.5:10)),
+           TempMAxcat = cut(TMPmax, c(-10, -5,0, 5,10, 15,20,25,30,35,40)),
+           TEmpMincat= cut(TMPmin, c(-10, -5,0, 5,10, 15,20,25,30,35,40)),
+           pcat = cut(PCP, c(-1, 0, .5, 1:5, 7, 9, 15, 20, 25, 30, 200)))%>% ### Create class of PCP
+    ddply(.(yearmonth),transform,monthweek=1+week-min(week)) ### Convert weeks of year to month
+})
 
+### Set colors
+listColors <- list(WND = RColorBrewer::brewer.pal(8, "PRGn")[c(-7,-8)],
+                   HMD = RColorBrewer::brewer.pal(11, "PuOr"),
+                   Temp = RColorBrewer::brewer.pal(11, "Spectral"))
 
-### TXT files to The Relative Humidity Table (HMD)
+col_p <- list(Temp = colorRampPalette(listColors$Temp[11:1]),
+              WND = colorRampPalette(listColors$WND[6:1]),
+              HMD = colorRampPalette(listColors$HMD))
 
-lapply(1:length(List.WeatherStaGrb), function(x){
-  write.table(cbind(as.numeric(transform(List.WeatherStaGrb[[x]][,"Date"], Date = format(Date , "%Y%m%d"))[,1]),
-                    # List.WeatherStaGrb[[x]][,c("PCP")]),
-              signif(List.WeatherStaGrb[[x]][,c("HMD")],4)),
-              col.names = FALSE, 
-              row.names	= F,
-              sep = ",",
-              file=paste0("HMD_",unique(List.WeatherStaGrb[[x]][,"Code"]),"_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][1,"Date"], Date = format(Date , "%Y%m%d"))), "_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][dim(List.WeatherStaGrb[[x]])[1],"Date"], Date = format(Date , "%Y%m%d"))),
-                          ".txt"))
+Df.info = data.frame(var = c("Daily average relative humidity", "Daily maximum temperature",
+                   "Daily minimum temperature","Daily average wind speed"),
+           fill = c("%","ºC","ºC","m/s"))
+
+#### Daily average relative humidity
+
+lapply(1:length(List.WeatherStaGrbINMET), function(x){ 
+  ggplot(List.WeatherStaGrbINMET[[x]], 
+         aes(weekday, monthweek, fill = HMDcat)) +
+    geom_tile(colour = "white", size = .4)  + 
+    guides(fill = guide_colorsteps(barwidth = 15,
+                                   barheight = .3,
+                                   title.position = "top")) +
+    scale_fill_manual(values = c(col_p$HMD(12)),
+                      na.value = "grey65", drop = FALSE) +
+    facet_grid(year~ month, scales = "free_y") +
+    labs(subtitle = paste("Weather Station code:",unique(List.WeatherStaGrbINMET[[x]]$Code)), 
+         title = Df.info[[1]][1],
+         caption = "Source: INMET - Instituto Nacional de Meteorologia",
+         fill = Df.info[[2]][1]) +
+    scale_y_reverse() +
+    theme_classic()+
+    theme(legend.position = "bottom",
+          legend.text = element_text( hjust = .5),
+          legend.title = element_text(size = 8, hjust = 1),
+          axis.title = element_blank(),
+          axis.ticks = element_blank(),
+          axis.text.y = element_blank(),
+          axis.text.x  = element_text(angle = 90,hjust=1, vjust=0.2),
+          panel.grid = element_blank(),
+          panel.background = element_blank(),
+          plot.caption =  element_text( hjust = 1, size = 8),
+          text = element_text(size=8))
+  # ggsave(file= paste0(unique(dat_pr[[x]]$Code),"_HMD.png"),
+  #        width = 26, height = 18, units = "cm",dpi = 300)
+})
+
+ # "Daily maximum temperature",
+
+lapply(1:length(List.WeatherStaGrbINMET), function(x){ 
+  ggplot(List.WeatherStaGrbINMET[[x]], 
+         aes(weekday, monthweek, fill = TEmpMincat)) +
+    geom_tile(colour = "white", size = .4)  + 
+    guides(fill = guide_colorsteps(barwidth = 15,
+                                   barheight = .3,
+                                   title.position = "top")) +
+    scale_fill_manual(values = c(col_p$Temp(10)),
+                      na.value = "grey65", drop = FALSE) +
+    facet_grid(year~ month, scales = "free_y") +
+    labs(subtitle = paste("Weather Station code:",unique(List.WeatherStaGrbINMET[[x]]$Code)), 
+         title = Df.info[[1]][3],
+         caption = "Source: INMET - Instituto Nacional de Meteorologia",
+         fill = Df.info[[2]][3]) +
+    scale_y_reverse() +
+    theme_classic()+
+    theme(legend.position = "bottom",
+          legend.text = element_text( hjust = .5),
+          legend.title = element_text(size = 8, hjust = 1),
+          axis.title = element_blank(),
+          axis.ticks = element_blank(),
+          axis.text.y = element_blank(),
+          axis.text.x  = element_text(angle = 90,hjust=1, vjust=0.2),
+          panel.grid = element_blank(),
+          panel.background = element_blank(),
+          plot.caption =  element_text( hjust = 1, size = 8),
+          text = element_text(size=8))
+  # ggsave(file= paste0(unique(dat_pr[[x]]$Code),"_HMD.png"),
+  #        width = 26, height = 18, units = "cm",dpi = 300)
 })
 
 
-### TXT files to The Temperature Table (TMP) 
-
-
-
-lapply(1:length(List.WeatherStaGrb), function(x){
-  write.table(cbind(as.numeric(transform(List.WeatherStaGrb[[x]][,"Date"], Date = format(Date , "%Y%m%d"))[,1]),
-              signif(List.WeatherStaGrb[[x]][,c("TMPmax")],4),
-              signif(List.WeatherStaGrb[[x]][,c("TMPmin")],4)),
-              col.names = FALSE, 
-              row.names	= F,
-              sep = ",",
-              file=paste0("TMP_",unique(List.WeatherStaGrb[[x]][,"Code"]),"_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][1,"Date"], Date = format(Date , "%Y%m%d"))), "_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][dim(List.WeatherStaGrb[[x]])[1],"Date"], Date = format(Date , "%Y%m%d"))),
-                          ".txt"))
+lapply(1:length(List.WeatherStaGrbINMET), function(x){ 
+  ggplot(List.WeatherStaGrbINMET[[x]], 
+         aes(weekday, monthweek, fill = TempMAxcat)) +
+    geom_tile(colour = "white", size = .4)  + 
+    guides(fill = guide_colorsteps(barwidth = 15,
+                                   barheight = .3,
+                                   title.position = "top")) +
+    scale_fill_manual(values = c(col_p$Temp(10)),
+                      na.value = "grey65", drop = FALSE) +
+    facet_grid(year~ month, scales = "free_y") +
+    labs(subtitle = paste("Weather Station code:",unique(List.WeatherStaGrbINMET[[x]]$Code)), 
+         title = Df.info[[1]][2],
+         caption = "Source: INMET - Instituto Nacional de Meteorologia",
+         fill = Df.info[[2]][2]) +
+    scale_y_reverse() +
+    theme_classic()+
+    theme(legend.position = "bottom",
+          legend.text = element_text( hjust = .5),
+          legend.title = element_text(size = 8, hjust = 1),
+          axis.title = element_blank(),
+          axis.ticks = element_blank(),
+          axis.text.y = element_blank(),
+          axis.text.x  = element_text(angle = 90,hjust=1, vjust=0.2),
+          panel.grid = element_blank(),
+          panel.background = element_blank(),
+          plot.caption =  element_text( hjust = 1, size = 8),
+          text = element_text(size=8))
+  # ggsave(file= paste0(unique(dat_pr[[x]]$Code),"_HMD.png"),
+  #        width = 26, height = 18, units = "cm",dpi = 300)
 })
 
 
-### TXT files The Wind Speed Table (WND) 
 
-lapply(1:length(List.WeatherStaGrb), function(x){
-  write.table(cbind(as.numeric(transform(List.WeatherStaGrb[[x]][,"Date"], Date = format(Date , "%Y%m%d"))[,1]),
-              signif(List.WeatherStaGrb[[x]][,c("WND")],4)),
-              col.names = FALSE, 
-              row.names	= F,
-              sep = ",",
-              file=paste0("WND_",unique(List.WeatherStaGrb[[x]][,"Code"]),"_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][1,"Date"], Date = format(Date , "%Y%m%d"))), "_",
-                          as.numeric(transform(List.WeatherStaGrb[[x]][dim(List.WeatherStaGrb[[x]])[1],"Date"], Date = format(Date , "%Y%m%d"))),
-                          ".txt"))
-})
-
-df_list.FileInfo = lapply(1:length(df_list.SWAT), function(x){
-  output_df = data.frame("ID" = unique(df_list.SWAT[[x]][,"Code"]),
-                         "Name" = gsub("-", "", paste0(unique(df_list.SWAT[[x]][,"Code"]),"_",weatherStations[[x]][1,"Date"], "_",weatherStations[[x]][dim(df_list.SWAT[[x]])[1],"Date"])),
-                         "LAT" = unique(df_list.SWAT[[x]][,"Latitude"]),
-                         "LONG" = unique(df_list.SWAT[[x]][,"Longitude"]),
-                         "ELEVATION" = unique(df_list.SWAT[[x]][,"Elevation"]),
-                         "StationName" = unique(df_list.SWAT[[x]][,"Name"]))
-  })
-
-df_list.FileInfo <- do.call(rbind, df_list.FileInfo)
-df_list.FileInfo <- df_list.FileInfo[df_list.FileInfo$ID %in% c("A828","A837","A839","A840","A844","A853","A856","A880","A882","A883","A894"),]
-
-
-varString <- c("HMD","WND","TMP" )
-
-List_Fork = lapply(1:length(varString), function(x){
-      output_df = data.frame( "ID" = df_list.FileInfo[,"ID"],
-                              "NAME" =   paste(varString[x],df_list.FileInfo$Name, sep = "_"),
-                              "LAT" = df_list.FileInfo[,"LAT"],
-                              "LONG" = df_list.FileInfo[,"LONG"],
-                              "ELEVATION" = df_list.FileInfo[,"ELEVATION"])
+lapply(1:length(List.WeatherStaGrbINMET), function(x){ 
+  ggplot(List.WeatherStaGrbINMET[[x]], 
+         aes(weekday, monthweek, fill = WNDcat)) +
+    geom_tile(colour = "white", size = .4)  + 
+    guides(fill = guide_colorsteps(barwidth = 15,
+                                   barheight = .3,
+                                   title.position = "top")) +
+    scale_fill_manual(values = c("grey90",col_p$WND(6)),
+                      na.value = "grey65", drop = FALSE) +
+    facet_grid(year~ month, scales = "free_y") +
+    labs(subtitle = paste("Weather Station code:",unique(List.WeatherStaGrbINMET[[x]]$Code)), 
+         title = Df.info[[1]][4],
+         caption = "Source: INMET - Instituto Nacional de Meteorologia",
+         fill = Df.info[[2]][4]) +
+    scale_y_reverse() +
+    theme_classic()+
+    theme(legend.position = "bottom",
+          legend.text = element_text( hjust = .5),
+          legend.title = element_text(size = 8, hjust = 1),
+          axis.title = element_blank(),
+          axis.ticks = element_blank(),
+          axis.text.y = element_blank(),
+          axis.text.x  = element_text(angle = 90,hjust=1, vjust=0.2),
+          panel.grid = element_blank(),
+          panel.background = element_blank(),
+          plot.caption =  element_text( hjust = 1, size = 8),
+          text = element_text(size=8))
+  # ggsave(file= paste0(unique(dat_pr[[x]]$Code),"_HMD.png"),
+  #        width = 26, height = 18, units = "cm",dpi = 300)
 })
 
 
-lapply(1:length(List_Fork), function(x){
-        write.table(List_Fork[[x]],
-                   paste0(varString[x],"fork.txt"),
-                   quote =F, row.names	= F,  sep = ",")
-  })
-
-
-
-```
-
-```{r PlotData}
-
-lapply(1:11,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=HMD))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("2005-01-01"),as.Date("2020-12-31")))+
-  ylim(c(0,100))+
-  theme_bw()
-  })
-
-
-lapply(1:11,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=TMPmax))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("2005-01-01"),as.Date("2020-12-31")))+
-  ylim(c(0,50))+
-  theme_bw()
-  })
-
-lapply(1:11,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=TMPmin))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("2005-01-01"),as.Date("2020-12-31")))+
-  ylim(c(-8,30))+
-  theme_bw()
-  })
-
-lapply(1:11,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=WND))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("2005-01-01"),as.Date("2020-12-31")))+
-  ylim(c(0,20))+
-  theme_bw()
-  })
-
-```
-
-
-```{r Import inmet files - Conventional_Stations}
-
-list.weatherStations = list.files(path = ".\\NonAutomatic",pattern = "*.csv")[-54] 
-list.weatherStations = paste0(".\\NonAutomatic\\",list.weatherStations)
-
-weatherStations = lapply(list.weatherStations, function(x){
- read.delim(x, skip = 10, sep = ";" ,na.strings = "null", col.names = c("Date","EVAP","INSO","PCP","TMPmax","TMPmea","TMPmin","HMD","WND","NA"))[,1:9]})
-
-Head.weatherStations = lapply(list.weatherStations, function(x){
- read.delim(x, nrows = 8, header = FALSE, col.names = c("Cod","Infor"), sep = ":")})
-
-df_list.SWAT = lapply(1:length(Head.weatherStations), function(x){
-  output_df = data.frame("Code" = gsub(" ", "",Head.weatherStations[[x]][2,"Infor"]),
-                         "Name" = gsub(" ", "", Head.weatherStations[[x]][1,"Infor"]),
-                         "Latitude" = Head.weatherStations[[x]][3,"Infor"],
-                         "Longitude" = Head.weatherStations[[x]][4,"Infor"],
-                         "Elevation" = Head.weatherStations[[x]][5,"Infor"],
-                         "Date" =  format(as.Date(weatherStations[[x]][,"Date"]),"%m/%d/%Y"),
-                         "HMD" = weatherStations[[x]][,"HMD"],
-                         "PCP" = weatherStations[[x]][,"PCP"],
-                         "TMPmax" = weatherStations[[x]][,"TMPmax"],
-                         "TMPmin" = weatherStations[[x]][,"TMPmin"],
-                         "WND" = weatherStations[[x]][,"WND"],
-                         "INSO" = weatherStations[[x]][,"INSO"])
-})
-
-
-df_list.FileInfo = lapply(1:length(df_list.SWAT), function(x){
-  output_df = data.frame("ID" = unique(df_list.SWAT[[x]][,"Code"]),
-                         "Name" = gsub("-", "", paste0(unique(df_list.SWAT[[x]][,"Code"]),"_",weatherStations[[x]][1,"Date"], "_",weatherStations[[x]][dim(df_list.SWAT[[x]])[1],"Date"])),
-                         "LAT" = unique(df_list.SWAT[[x]][,"Latitude"]),
-                         "LONG" = unique(df_list.SWAT[[x]][,"Longitude"]),
-                         "ELEVATION" = unique(df_list.SWAT[[x]][,"Elevation"]),
-                         "StationName" = unique(df_list.SWAT[[x]][,"Name"]))
-  })
-
-df_list.FileInfo = do.call(rbind, df_list.FileInfo)
-full_df = do.call(rbind, df_list.SWAT)
-
-full_df = full_df  %>% 
-  mutate_all(funs(replace_na(., -99.0)))
-full_df$Date = as.Date(full_df$Date, "%m/%d/%Y")
-
-List.WeatherStaGrb = full_df %>%
-                filter(Code %in% c("83972","83932","83942","83941","83914","83917","83916")) %>%                 group_split(Code)
-
-write.csv(df_list.FileInfo[df_list.FileInfo$ID %in% c("83972","83932","83942","83941","83914","83917","83916"),] , "NonAutomaticStation_Fork.csv" , row.names	= F)
-
-```
-
-
-```{r PlotDataConv}
-
-lapply(1:7,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=HMD))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("1998-01-01"),as.Date("2020-12-31")))+
-  ylim(c(0,100))+
-  theme_bw()
-  })
-
-lapply(1:7,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=TMPmax))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("1998-01-01"),as.Date("2020-12-31")))+
-  ylim(c(-5,50))+
-  theme_bw()
-  })
-
-lapply(1:7,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=TMPmin))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("1998-01-01"),as.Date("2020-12-31")))+
-  ylim(c(-10,30))+
-  theme_bw()
-  })
-
-lapply(1:7,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=WND))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("1998-01-01"),as.Date("2020-12-31")))+
-  ylim(c(0,25))+
-  theme_bw()
-  })
-
-lapply(1:7,function(x){
-ggplot(List.WeatherStaGrb[[x]], aes(x=Date,y=INSO))+
-  geom_line()+
-    scale_x_date(date_labels = "%b %Y",
-               limit=c(as.Date("1998-01-01"),as.Date("2020-12-31")))+
-  ylim(c(0,24))+
-  theme_bw()
-  })
-
-
-
-```
-
-
-```{r Fork files}
-### Fork files
-
-
-df_list.FileInfo
-
-list.weatherStations <- list.files(pattern = "*.txt")
-args_list <- strsplit(list.weatherStations, "[\\._]+")
-
-df_list <- lapply(1:length(args_list), function(x){
-  output_df <- data.frame("ID" = args_list[[x]][2],
-                         "NAME" = paste(args_list[[x]][1], args_list[[x]][2],args_list[[x]][3],args_list[[x]][4],sep = "_"))
-})
-
-full_df <- do.call(rbind, df_list)
-
-col_order <- c("ID", "NAME","LAT","LONG","ELEVATION")
-Fork_DF <- join(df_list.FileInfo, full_df, by = "ID")
-
-
-
-
-write.table(Fork_DF[,col_order] %>%
-   filter( grepl("PCP",NAME)), "PCPfork.txt",quote =F,  row.names	= F,
-              sep = ",")
-write.table(Fork_DF[,col_order] %>%
-   filter( !grepl("PCP",NAME)), "Qfork.txt",quote =F,  row.names	= F,
-              sep = ",")
 ```
 
